# Native-Plugin-Template-Rust

./: Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: config.rs  console.rs  lib.rs  panic_hook.rs  paths.rs  utils.rs
