[package]
name = "native-plugin-template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.22"
simplelog = "0.12.2"
eyre = "0.6.12"
directories = "5.0.1"
backtrace = "0.3.73"
libmem = { version = "5.0.0", features = ["static"] }

serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
native-plugin-lib = { git = "https://github.com/MolotovCherry/Native-Plugin-Lib" }

# docs can be found here. different api functions require adding the relevant features
# https://microsoft.github.io/windows-docs-rs/doc/windows/index.html
[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    # for the popup
    "Win32_UI_WindowsAndMessaging",
    # for debugger
    "Win32_System_Diagnostics_Debug",
    # for console
    "Win32_System_Console",
]

[build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
lto = true
codegen-units = 1

# stamp dll with project metadata 😄
# see winres for more keys to stamp your dll with
# https://docs.rs/winres/0.1.12/winres/struct.WindowsResource.html
[package.metadata.winres]
OriginalFilename = "PROGRAM.EXE"
LegalCopyright = "Copyright © 2023"
