[package]
name = "native-plugin-template"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.29"
simplelog = "0.12.2"
eyre = "0.6.12"
directories = "6.0.0"
backtrace = "0.3.76"
extern-c = "0.1.1-rc1"
libmem = { version = "5.1.4", features = ["static"] }

serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
native-plugin-lib = { git = "https://github.com/MolotovCherry/Native-Plugin-Lib" }

# docs can be found here. different api functions require adding the relevant features
# https://microsoft.github.io/windows-docs-rs/doc/windows/index.html
# features search can be found here
# https://microsoft.github.io/windows-rs/features/#/0.61.0
[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Threading",
    # for the popup
    "Win32_UI_WindowsAndMessaging",
    # for debugger
    "Win32_System_Diagnostics_Debug",
    # for console
    "Win32_System_Console",
]

[build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
lto = true
codegen-units = 1

# stamp dll with project metadata 😄
# see winres for more keys to stamp your dll with
# https://docs.rs/winres/0.1.12/winres/struct.WindowsResource.html
[package.metadata.winres]
OriginalFilename = "PROGRAM.EXE"
LegalCopyright = "Copyright © 2023"
